--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
+    "json-server": "^0.17.4",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
